--- a/demo01index.html
+++ b/demo01index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>demo page</title>
+    <style>
+        h1 {
+          color: red;
+        }
+    </style>
 </head>
 <body>
     <p>this is first test page in github</p>
@@ -10,6 +15,6 @@
     <h2>second test</h2>
     <h3>third test</h3>
     <h4>fourth test</h4>
-    
+
 </body>
 </html>
