add chinese words and add border

--- a/demo01index.html
+++ b/demo01index.html
@@ -6,12 +6,17 @@
     <style>
         h1 {
           color: red;
+          width: 50%;
+          border: 5px solid black;
+          padding: 10px;
+          margin: 50px;
+          text-align: center;
         }
     </style>
 </head>
 <body>
-    <p>this is first test page in github</p>
     <h1>Welcome to my new World</h1>
+    <h1>欢迎来到我的网站</h1>
     <h2>second test</h2>
     <h3>third test</h3>
     <h4>fourth test</h4>
