--- a/demo01index.html
+++ b/demo01index.html
@@ -6,7 +6,7 @@
     <style>
         h1 {
           color: red;
-          width: 50%;
+          width: auto;
           border: 5px solid black;
           padding: 10px;
           margin: 50px;
