--- a/demo01index.html
+++ b/demo01index.html
@@ -5,7 +5,7 @@
     <title>demo page</title>
     <style>
         h1 {
-          color: red;
+          color: coral;
           width: auto;
           border: 5px solid black;
           padding: 10px;
@@ -16,10 +16,8 @@
 </head>
 <body>
     <h1>Welcome to my new World</h1>
-    <h1>欢迎来到我的网站</h1>
-    <h2>second test</h2>
-    <h3>third test</h3>
-    <h4>fourth test</h4>
+    <h1></h1>
+    <p>道可道非常道</p>
 
 </body>
 </html>
