--- a/demo01index.html
+++ b/demo01index.html
@@ -12,6 +12,9 @@
           margin: 50px;
           text-align: center;
         }
+        p {
+          text-align: center;
+        }
     </style>
 </head>
 <body>
