add studying list

--- a/demo01index.html
+++ b/demo01index.html
@@ -15,13 +15,29 @@
         p {
           text-align: center;
           font-size: 40px;
-
         }
+        ol {
+          text-align: left;
+          font-size: 30px;
+          color: gray;
+        }
+        
     </style>
 </head>
 <body>
     <h1>Welcome to my new World</h1>
     <br>
+    <p>
+        <ol>
+          Html5
+          CSS
+          Javascript
+          Git
+          Python
+          Vba
+        </ol>
+
+    </p>
     <p>道可道非常道</p>
 
 </body>
