--- a/demo01index.html
+++ b/demo01index.html
@@ -28,15 +28,12 @@
     <h1>Welcome to my new World</h1>
     <br>
     <p>
-        <ol>
-          Html5
-          CSS
-          Javascript
-          Git
-          Python
-          Vba
-        </ol>
-
+        <ol>Html5</ol>
+        <ol>CSS</ol>
+        <ol>Javascript</ol>
+        <ol>Git</ol>
+        <ol>Python</ol>
+        <ol>Vba</ol>
     </p>
     <p>道可道非常道</p>
 
