--- a/demo01index.html
+++ b/demo01index.html
@@ -20,14 +20,16 @@
           text-align: left;
           font-size: 30px;
           color: gray;
+          line-height: 1.5;
         }
-        
+
     </style>
 </head>
 <body>
     <h1>Welcome to my new World</h1>
     <br>
     <p>
+        <ol>
         <ol>Html5</ol>
         <ol>CSS</ol>
         <ol>Javascript</ol>
