make the list in number order and make the left margin 150px

--- a/demo01index.html
+++ b/demo01index.html
@@ -21,6 +21,7 @@
           font-size: 30px;
           color: gray;
           line-height: 1.5;
+          margin-left: 150px;
         }
 
     </style>
@@ -29,14 +30,16 @@
     <h1>Welcome to my new World</h1>
     <br>
     <p>
-        <ol>
-        <ol>Html5</ol>
-        <ol>CSS</ol>
-        <ol>Javascript</ol>
-        <ol>Git</ol>
-        <ol>Python</ol>
-        <ol>Vba</ol>
-        <ol>AHK</ol>
+      <ol>
+        <li>Html5</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Git</li>
+        <li>Python</li>
+        <li>Vba</li>
+        <li>AHK</li>
+
+      </ol>
 
     </p>
     <p>道可道非常道</p>
