--- a/demo01index.html
+++ b/demo01index.html
@@ -42,6 +42,7 @@
       </ol>
 
     </p>
+    <a href='https://silvio27.github.io/PyechartsDemoTest/render.html'>上海市路内停车位各区域统计</a>
     <p>道可道非常道</p>
 
 </body>
