--- a/demo02index.html
+++ b/demo02index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>乖宝宝</title>
+    <title>Good Good Study Day Day Up</title>
 </head>
 <body>
 
     <div>
         <h1>
-            <p>宝宝说她要睡觉了</p>
-            <p>明天开始认真的学Html5</p>
+            <p>开始认真的学Html5</p>
         </h1>
 
     </div>
