--- a/demo02index.html
+++ b/demo02index.html
@@ -237,7 +237,7 @@
                         console.log(response.data)
                     })
                     .catch(error => {
-                        this.localback = 'Error! Could not reach the API. ' + error
+                        this.localback = 'ABC'
                         alert(this.localback)
                     })
             },
