--- a/demo02index.html
+++ b/demo02index.html
@@ -238,7 +238,7 @@
                     })
                     .catch(error => {
                         this.localback = 'ABC'
-                        alert(this.localback)
+                        // alert(this.localback)
                     })
             },
         },
