--- a/demo02index.html
+++ b/demo02index.html
@@ -230,7 +230,7 @@
             },
             getlocalAnswer(linkitem = '') {
                 // this.answer = "Thinking……"
-                axios.get('http://10.0.0.6:8000/' + linkitem)
+                axios.get('https://silvio27.github.io/demo01/' + linkitem)
                     .then(response => {
                         console.log(response)
                         this.localback = response.data
@@ -244,7 +244,7 @@
         },
         mounted() {
             this.getAnswer()
-            this.getlocalAnswer('message')
+            this.getlocalAnswer('data.json')
         },
         template: `
           <div class="acpt">
